fixed notice box colors contrast, improved methods in parser.

--- a/blueprint/screen.css
+++ b/blueprint/screen.css
@@ -180,9 +180,9 @@ input.title { font-size:1.5em; }
 textarea { width:400px; height:250px; padding:5px; }
 select { width:200px; }
 .error, .notice, .success { padding:.8em; margin-bottom:1em; border:2px solid #ddd; }
-.error { background:#FBE3E4; border-color:#FBC2C4; }
-.notice { background:#FFF6BF; border-color:#FFD324; }
-.success { background:#E6EFC2; border-color:#C6D880; }
-.error, .error a { color:#D12F19; }
-.notice, .notice a { color:#817134; }
-.success, .success a { color:#529214; }
+.error { background:#FBE3E4; color:#8a1f11; border-color:#FBC2C4; }
+.notice { background:#FFF6BF; color:#514721; border-color:#FFD324; }
+.success { background:#E6EFC2; color:#264409; border-color:#C6D880; }
+.error a { color:#8a1f11; }
+.notice a { color:#514721; }
+.success a { color:#264409; }
